samples/istio/sidecar-mode/gw_vs.yaml
# --------------------------------------------------------------------
# Copyright (c) 2020, WSO2 Inc. (http://wso2.com) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apim-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
      hosts:
        - "apim.wso2.com"
        - "gw.wso2.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apim-virtualservice
spec:
  hosts:
    - "apim.wso2.com"
    - "gw.wso2.com"
  gateways:
    - apim-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - apim.wso2.com
      route:
        - destination:
            host: wso2apim
            port:
              number: 9443
    - match:
        - port: 443
          sniHosts:
            - gw.wso2.com
      route:
        - destination:
            host: router
            port:
              number: 9095
